# Lab2Burlakov

./: .gitignore  app.py  calc.py  data.json  myform.py  pyproject.toml  routes.py  test_calc.py  test_int.py
views/: index.tpl
