[tool.poetry]
name = "lab2burlakov"
version = "0.1.0"
description = ""
authors = ["triks <trik0001000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bottle = "^0.12.25"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
